# local-email-agent

./: .gitignore  CLAUDE.md  README.md  email-agent-plan.md  email-search.sh  generate-brief-direct.sh  generate-brief.sh  gmail-stats.sh  pyproject.toml  sync-gmail.sh
.claude/commands/: email-brief.md
.claude/skills/email-brief/: SKILL.md
docs/: agent-sdk-migration-plan.md  email-agent-comparison.md  email-search-plan.md  performance-enhancements-design.md  testing-plan.md  thread-grouping-plan.md
scripts/: cache_manager.py  classify_emails.py  classify_with_claude.py  claude_client.py  email_search.py  fetch_emails.py  group_threads.py  parse_eml.py  render_brief.py
templates/: brief.html  search-results.html
tests/: conftest.py  test_cache_manager.py  test_classify.py  test_claude_client.py  test_email_search.py  test_fetch_emails.py  test_group_threads.py  test_parse_eml.py  test_render_brief.py
